--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ Flask==3.0.0
 pandas==2.0.3
 python-dotenv==1.0.0
 vobject==0.9.6.1
-openpyxl==3.1.2
-gunicorn==21.2.0
+xlrd==2.0.1
 flask-cors==4.0.0
