--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
 
   build:
 
-    runs-on: python:3.11.6
+    runs-on: [python:3.11.6,windows-latest]
 
     steps:
     - uses: actions/checkout@v3
