--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,11 @@ jobs:
         tags: shivamgutgutia/contactify:latest
 
     - name: Setup gcloud CLI
-      uses: google-github-actions/setup-gcloud@v1
+      uses: google-github-actions/auth@v2
       with:
+        credentials: ${{ secrets.GCLOUD_AUTH_KEY }}
         project_id: shivam-contacts-generator
-        service_account_key: ${{ secrets.GCLOUD_AUTH }}
+        run_as: gutgutia159@gmail.com
 
     - name: Deploy to Cloud Run
       run: |
