--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,24 @@
+blinker==1.8.2
+click==8.1.7
+colorama==0.4.6
+defusedxml==0.7.1
+et-xmlfile==1.1.0
 Flask==3.0.0
-pandas==2.0.3
-python-dotenv==1.0.0
-vobject==0.9.6.1
-xlrd==2.0.1
-flask-cors==4.0.0
-openpyxl==3.1.2
-odfpy==1.4.1
+Flask-Cors==4.0.0
 gunicorn==21.2.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==2.1.0
+odfpy==1.4.1
+openpyxl==3.1.2
+packaging==24.1
+pandas==2.2.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2024.1
+six==1.16.0
+tzdata==2024.1
+vobject==0.9.6.1
+Werkzeug==3.0.4
+xlrd==2.0.1
